Fix title spacing

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -43,7 +43,6 @@
 .page-title,
 .post-title {
   font-size: 2rem;
-  margin-bottom: .5rem;
   margin-top: 0;
 
   a {
